[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/script/Sort.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Sort.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/audio/Wrong.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/Correct.wav" type="AudioStream" id=4]
[ext_resource path="res://src/scene/battle.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[node name="Sort" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -38.0
margin_top = -39.0
margin_right = 1402.0
margin_bottom = 835.0
color = Color( 0.00392157, 0.290196, 0.894118, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 686.389
margin_top = 454.949
margin_right = 1263.39
margin_bottom = 710.949
__meta__ = {
"_edit_use_anchors_": false
}

[node name="correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Button1" type="Button" parent="."]
margin_left = 715.436
margin_top = 480.929
margin_right = 938.436
margin_bottom = 554.929
custom_fonts/font = ExtResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 999.436
margin_top = 480.929
margin_right = 1222.44
margin_bottom = 554.929
custom_fonts/font = ExtResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 721.436
margin_top = 606.929
margin_right = 944.436
margin_bottom = 680.929
custom_fonts/font = ExtResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 996.436
margin_top = 606.929
margin_right = 1219.44
margin_bottom = 680.929
custom_fonts/font = ExtResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="battle" parent="." instance=ExtResource( 5 )]

[node name="Title" type="Label" parent="."]
margin_left = 532.345
margin_top = 279.387
margin_right = 851.345
margin_bottom = 399.387
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0.0509804, 0.466667, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "กดตามลำดับ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Label" parent="Title"]
margin_left = -25.7549
margin_top = 83.0609
margin_right = 293.245
margin_bottom = 128.061
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.027451, 0.105882, 0.47451, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "แตะที่ตัวเลขจากน้อยไปมาก"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button1" to="." method="_on_Button1_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button4_button_down"]
